# highlight-assertions

./: .gitignore  Cargo.toml  Earthfile  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs  parse_assertions.rs
