[package]
name = "highlight-assertions"
version = "0.1.4"
edition = "2021"
authors = ["Stephan Seitz <stephan.seitz@fau.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing"]
categories = ["api-bindings", "parsing", "text-editors"]
repository = "https://github.com/theHamsta/highlight-assertions"

[dependencies]
tree-sitter = "0.20.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
regex = "1.5"
anyhow = "1.0"
clap = { version = "3.0.0-rc.1", features = ["derive"] }
libloading = "0.7.1"
